---
config:
  look: handDrawn
  theme: neutral
---

classDiagram
    class ConfidentialFundraising {
        +createCampaign()
        +contribute()
        +finalizeCampaign()
        +cancelCampaign()
        +claimTokens()
        +requestMyContributionDecryption()
        +submitMyContributionDecryption()
        +requestTotalRaisedDecryption()
        +submitTotalRaisedDecryption()
        +getEncryptedContribution()
        +getEncryptedTotalRaised()
        +getContributionStatus()
        +getTotalRaisedStatus()
        +getMyContribution()
        +getTotalRaised()
        +getCampaign()
        +hasContribution()
        +hasClaimed()
        -Campaign[] campaigns
        -mapping contributions
        -mapping decryptedContributions
        -mapping decryptedTotalRaised
    }

    class ShareVault {
        +deposit()
        +withdraw()
        +requestAvailableBalanceDecryption()
        +submitAvailableBalanceDecryption()
        +lockFunds()
        +transferLockedFunds()
        +unlockFunds()
        +getAvailableBalanceStatus()
        +getAvailableBalance()
        +getPendingAvailableBalanceHandle()
        +getEncryptedBalance()
        +getEncryptedBalanceAndLocked()
        -euint64 balances
        -euint64 lockedAmounts
        -euint64 totalLocked
        -mapping decryptedAvailableBalance
    }

    class CampaignToken {
        +mint()
        +balanceOf()
        +transfer()
        -uint256 MAX_SUPPLY
        -uint256 campaignId
    }

    class FundraisingStorage {
        #Campaign[] campaigns
        #euint64 contributions
        #euint64 totalRaised
        #bool finalized
    }

    class ShareVaultStorage {
        #euint64 balances
        #euint64 lockedAmounts
        #uint256 totalLocked
    }

    class EncryptedHelper {
        +decodeUint64()
        +decodeBool()
    }

    ConfidentialFundraising --|> FundraisingStorage
    ShareVault --|> ShareVaultStorage
    ConfidentialFundraising --> ShareVault : lockFunds()
    ConfidentialFundraising --> CampaignToken : creates
    ConfidentialFundraising ..> EncryptedHelper : uses
    ShareVault ..> EncryptedHelper : uses